# minipart

./: CMakeLists.txt  LICENSE  README.md
include/: bin_packing.h  bipart_solver.h  coarsener.h  common.h  hypergraph.h  inc_bipart.h  io.h  local_search.h  problem.h  queues.h  rand_gen.h  solver.h
src/: bipart_solver.cc  coarsener.cc  hypergraph.cc  io.cc  local_search.cc  main.cc  problem.cc  solver.cc
test/: CMakeLists.txt  hypergraph_test.cc  io_test.cc
